# proyect-x

./: .env.example  .gitignore  .timefly-ai-queue.json  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  forge.toml  launch.ps1
.agents/skills/clean-architecture/: SKILL.md
.agents/skills/naming-conventions/: SKILL.md
.agents/skills/rust-best-practices/: SKILL.md
.agents/skills/rust-performance/: SKILL.md
.agents/skills/rust-security/: SKILL.md
.agents/skills/vue/: SKILL.md
.github/workflows/: release.yml
crates/agent-traits/: Cargo.toml
crates/agent-traits/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: config.rs  deploy.rs  init.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: integration_tests.rs  lib.rs
crates/core/src/actor/: echo.rs  mod.rs  supervisor.rs
crates/core/src/actor/roles/: base.rs  mod.rs
crates/core/src/api/: auth.rs  mod.rs  routes.rs  ws.rs
crates/core/src/drift/: recovery.rs
crates/core/src/loop/: controller.rs  divergence.rs  limits.rs  mod.rs
crates/core/src/machine/: gate.rs  mod.rs  phase.rs  transition.rs
crates/core/src/orchestrator/: mod.rs  roles.rs  task.rs  verification.rs
crates/memory/: Cargo.toml
crates/memory/src/: cache.rs  context.rs  hot.rs  lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs  sqlite.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  gemini.rs  lib.rs  mock.rs  ollama.rs  openai.rs  openai_compat.rs  router.rs  tests.rs
crates/shared/src/: error.rs  lib.rs  types.rs
crates/vault/: Cargo.toml
crates/vault/src/: keyring.rs  service.rs  tauri_store.rs
dashboard/: package-lock.json  package.json
dashboard/src/: App.vue  env.d.ts  style.css
dashboard/src/components/: AgentTable.vue  AgentsView.vue  ConfigView.vue  ContextView.vue  LogsView.vue  MetricsCards.vue  SessionsView.vue  Sidebar.vue  StatusView.vue  TopBar.vue
dashboard/src/components/ui/: Badge.vue  Button.vue  Card.vue  Icon.vue  Input.vue  MetricCard.vue
dashboard/src/composables/: useApi.ts  useWebSocket.ts
dashboard/src/stores/: app.ts
dashboard/src/views/: LoginView.vue  SettingsView.vue
desktop/: tauri.conf.json
desktop/src/: commands.rs  events.rs  main.rs
scripts/: backup.sh  dev.sh  install.sh  test-all.sh
test-proj/: .gitignore  forge.toml
tests/: Cargo.toml  api_e2e.rs  cli_e2e.rs  pipeline_e2e.rs
