[package]
name = "project-x-core"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
project-x-shared = { path = "../shared" }
project-x-agent-traits = { path = "../agent-traits" }
project-x-providers = { path = "../providers" }
project-x-mcp-host = { path = "../mcp-host" }
project-x-memory = { path = "../memory" }
project-x-persistence = { path = "../persistence" }
project-x-vault = { path = "../vault" }

ractor.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dashmap.workspace = true
chrono.workspace = true
rand.workspace = true
async-trait.workspace = true
axum.workspace = true
tower-http.workspace = true
futures-util.workspace = true