[package]
name = "project-x-persistence"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
project-x-shared = { path = "../shared" }
project-x-agent-traits = { path = "../agent-traits" }

rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
refinery.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true