[package]
name = "project-x-providers"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
project-x-shared = { path = "../shared" }
project-x-agent-traits = { path = "../agent-traits" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tiktoken-rs.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures-util = "0.3"