[package]
name = "project-x-vault"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
project-x-shared = { path = "../shared" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
uuid.workspace = true